--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         env:
-          CR_TOKEN: "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"
+          CR_TOKEN: ${{ secrets.RELEASE_TOKEN }}
