--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,5 +26,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
+        with:
+          charts_dir: Charts
         env:
           CR_TOKEN: ${{ secrets.RELEASE_TOKEN }}
