--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         with:
-          charts_dir: Charts
+          charts_dir: charts
         env:
           CR_TOKEN: ${{ secrets.RELEASE_TOKEN }}
