--- a/charts/pact-broker/templates/deployment.yaml
+++ b/charts/pact-broker/templates/deployment.yaml
@@ -24,14 +24,24 @@ spec:
         - env:
             {{- if .Values.postgresql.enabled }}
             - name: PACT_BROKER_DATABASE_USERNAME
-              value: postgres
+              value: {{.Values.postgresql.postgresqlUsername }}
             - name: PACT_BROKER_DATABASE_HOST
               value: {{ .Release.Name }}-postgresql.{{ .Release.Namespace }}.svc.cluster.local
             - name: PACT_BROKER_DATABASE_NAME
-              value: pact
+              value: {{.Values.postgresql.postgresqlDatabase }}
             - name: PACT_BROKER_DATABASE_PASSWORD
-              value: jemf9rAKgD
+              value: {{.Values.postgresql.postgresqlPassword }}
             {{- end }}
+            {{- if .Values.externalDB.enabled }}
+            - name: PACT_BROKER_DATABASE_USERNAME
+              value: {{ .Values.externalDB.userName }}
+            - name: PACT_BROKER_DATABASE_HOST
+              value: {{ .Values.externalDB.endpoint }}
+            - name: PACT_BROKER_DATABASE_NAME
+              value: {{ .Values.externalDB.databaseName }}
+            - name: PACT_BROKER_DATABASE_PASSWORD
+              value: {{ .Values.externalDB.password }}
+            {{- end}}
             {{- if .Values.appSettings.basicAuthentication.RWaccess.enabled }}
             - name: PACT_BROKER_BASIC_AUTH_USERNAME
               value: {{ .Values.appSettings.basicAuthentication.RWaccess.username}}
