--- a/charts/pact-broker/Chart.yaml
+++ b/charts/pact-broker/Chart.yaml
@@ -1,9 +1,40 @@
 apiVersion: v2
 name: pact-proker
-description: A Helm chart for Kubernetes to install Pact Broker
 type: application
 version: 0.1.3
 appVersion: "2.87.0.0"
+
+description: A Helm chart for Kubernetes to install Pact Broker
+long_description: |
+  This chart will deploy the following a running instance of pact-broker, and optionally a postgresql database instance running on the same namespace.
+
+  ## Installation
+  ### Add the helm repository
+  ```
+  $ helm repo add byahia http://byahia.github.io/pact-broker-helm-chart/
+  ```
+  ### From source
+  ```console
+  $ git clone https://github.com/byahia/pact-broker-helm-chart
+  $ cd ./charts/pact-broker
+  $ helm dep update
+  $ helm install --name myname --namespace mynamespace pact
+  ```
+  ## Development
+  Any help is welcome. Feel free to fork the repo and submit improvement and/or bugfixes.
+
+  ### Testing
+  ```console
+  $ make test
+  helm lint pact
+  ==> Linting pact
+  Lint OK
+  1 chart(s) linted, no failures
+  ```
+
+home: https://byahia.github.io/pact-broker-helm-chart/
+sources:
+  -https://github.com/byahia/pact-broker-helm-chart/tree/main/charts/pact-broker
 
 maintainers:
   - name: Bilel Yahia
