--- a/charts/pact-broker/templates/deployment.yaml
+++ b/charts/pact-broker/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
             - name: PACT_BROKER_DATABASE_USERNAME
               value: {{ .Values.externalDB.userName }}
             - name: PACT_BROKER_DATABASE_HOST
-              value: {{ .Values.externalDB.endpoint }}
+              value: {{ .Values.externalDB.endpoint }}:{{ .Values.externalDB.port }}
             - name: PACT_BROKER_DATABASE_NAME
               value: {{ .Values.externalDB.databaseName }}
             - name: PACT_BROKER_DATABASE_PASSWORD
