--- a/charts/pact-broker/values.yaml
+++ b/charts/pact-broker/values.yaml
@@ -1,8 +1,7 @@
 # Default values for pact-proker.
 # This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 1 # Number of pod replicas to create
 
 image:
   repository: pactfoundation/pact-broker # docker image repository
