--- a/charts/pact-broker/templates/deployment.yaml
+++ b/charts/pact-broker/templates/deployment.yaml
@@ -5,10 +5,9 @@ metadata:
   name: {{ .Release.Name }}-deployment
   namespace: {{ .Release.Namespace }}
   annotations:
-    {{ - include "global.annotations" $ | nindent 4 }}
-    {{ - if .deployment.annotations }}
-    {{ - toYaml .deployment.annotations | nindent 4 }}
-    {{ - end }}
+    {{ if .Values.deployment.annotations }}
+    {{ toYaml .Values.deployment.annotations | nindent 4 }}
+    {{ end }}
   labels:
     app.kubernetes.io/name: {{ .Release.Name }}
 
@@ -21,9 +20,9 @@ spec:
       app.kubernetes.io/name: {{ .Release.Name }}
   template:
     metadata:
-      {{ - if .deployment.annotations }}
-      {{ - toYaml .deployment.annotations | nindent 4 }}
-      {{ - end }}
+      {{ if .Values.deployment.annotations }}
+      {{ toYaml .Values.deployment.annotations | nindent 4 }}
+      {{ end }}
       labels:
         app.kubernetes.io/name: {{ .Release.Name }}
     spec:
